# opensesame-plugin-psychopy

./: MANIFEST.in  pyproject.toml  readme.md  setup.py  stdeb.cfg
opensesame_plugins/psychopy/: __init__.py
opensesame_plugins/psychopy/psychopy_gratingstim/: __init__.py  psychopy_gratingstim.py
opensesame_plugins/psychopy/psychopy_gratingstim/locale/: ar.qm  ar.ts  bn.qm  bn.ts  de.qm  de.ts  es.qm  es.ts  fr.qm  fr.ts  he.qm  he.ts  hi.qm  hi.ts  id.qm  id.ts  it.qm  it.ts  ja.qm  ja.ts  ko.qm  ko.ts  nl.qm  nl.ts  pt.qm  pt.ts  ru.qm  ru.ts  tr.qm  tr.ts  translatables.ts  yue.qm  yue.ts  zh.qm  zh.ts
opensesame_plugins/psychopy/psychopy_textstim/: __init__.py  psychopy_basestim.py  psychopy_textstim.py
opensesame_plugins/psychopy/psychopy_textstim/locale/: ar.qm  ar.ts  bn.qm  bn.ts  de.qm  de.ts  es.qm  es.ts  fr.qm  fr.ts  he.qm  he.ts  hi.qm  hi.ts  id.qm  id.ts  it.qm  it.ts  ja.qm  ja.ts  ko.qm  ko.ts  nl.qm  nl.ts  pt.qm  pt.ts  ru.qm  ru.ts  tr.qm  tr.ts  translatables.ts  yue.qm  yue.ts  zh.qm  zh.ts
opensesame_plugins/psychopy_gratingstim/: info.yaml  psychopy_gratingstim.py
opensesame_plugins/psychopy_textstim/: info.yaml  psychopy_basestim.py  psychopy_textstim.py
translation_tools/: translations.json
