[tool.poetry]
name = "opensesame-plugin-psychopy"
version = "0.8.0"
description = "PsychoPy plugins for OpenSesame"
authors = ["Sebastiaan Mathôt <s.mathot@cogsci.nl>"]
readme = "readme.md"
packages = [
    {include = "opensesame_plugins"},
]
license = "COPYING"
homepage = "https://osdoc.cogsci.nl/"
repository = "https://github.com/open-cogsci/opensesame-plugin-psychopy"

[tool.poetry.dependencies]
python = ">= 3.7"
opensesame-core = ">3.99.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
